--- a/src/index.html
+++ b/src/index.html
@@ -56,5 +56,47 @@
             </div>
         </div>
     </div>
+    <div class="advantages">
+        <div class="container">
+            <h3 class="advantages__header">НАШИ ПРЕИМУЩЕСТВА</h3>
+
+            <div class="advantages__wrapper">
+                <div class="advantages__block">
+                    <img src="icons/advantage_1.png" alt="bowl">
+                    <div class="advantages__descr">
+                        <div class="advantages__subheader">Делимся опытом</div>
+                        <div class="advantages__text">Наши сотрудники всегда готовы 
+                            поделиться своим опытом,<br>
+                        так как сами бегают полумарафоны, 
+                        переплыли Босфор, готовятся к 
+                        соревнованиям по триатлону!
+                        </div>
+                    </div>
+                </div>
+                <div class="advantages__block">
+                    <img src="icons/advantage_2.png" alt="heart">
+                    <div class="advantages__descr">
+                        <div class="advantages__subheader">Заботимся о здоровье</div>
+                        <div class="advantages__text">Мы работаем для того,<br>
+                            чтобы Ваши занятия спортом шли на 
+                            пользу Вашему здоровью и были в 
+                            радость Вам и Вашим близким!
+                        </div>
+                    </div>
+                </div>
+                <div class="advantages__block">
+                    <img src="icons/advantage_3.png" alt="sneaker">
+                    <div class="advantages__descr">
+                        <div class="advantages__subheader">Учим бегать</div>
+                        <div class="advantages__text">Помогаем с обучением<br>
+                            правильной технике бега!<br>
+                            Дружим с крупнейшей школой бега в России - 
+                            <a href="#">I LOVE RUNNING.</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
