second section and adaptation

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,18 @@
                     <a href="tel:+74999228974" class="header__phone">+7 (499) 922-89-74</a>
                     <button class="button">заказать звонок</button>
                 </div>
+                <ul class="menu">
+                    <li class="menu__item"><a href="#" class="menu__link">Главная</a></li>
+                    <li class="menu__item"><a href="#" class="menu__link">Консультация</a></li>
+                    <li class="menu__item"><a href="#" class="menu__link">Каталог</a></li>
+                    <li class="menu__item"><a href="#" class="menu__link">Отзывы</a></li>
+                    <li class="menu__item"><a href="#" class="menu__link">Контакты</a></li>
+                </ul>
+                <div class="hamburger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
             </header>
 
             <div class="promo__wrapper">
@@ -58,37 +70,42 @@
     </div>
     <div class="advantages">
         <div class="container">
-            <h3 class="advantages__header">НАШИ ПРЕИМУЩЕСТВА</h3>
+            <h2 class="title">НАШИ ПРЕИМУЩЕСТВА</h2>
 
             <div class="advantages__wrapper">
-                <div class="advantages__block">
-                    <img src="icons/advantage_1.png" alt="bowl">
-                    <div class="advantages__descr">
-                        <div class="advantages__subheader">Делимся опытом</div>
-                        <div class="advantages__text">Наши сотрудники всегда готовы 
-                            поделиться своим опытом,<br>
-                        так как сами бегают полумарафоны, 
-                        переплыли Босфор, готовятся к 
-                        соревнованиям по триатлону!
+                <div class="advantages__item">
+                    <img src="icons/advantage_1.png" alt="cup">
+                        <div class="advantages__subtitle">
+                            Делимся опытом
                         </div>
-                    </div>
+                        <div class="advantages__descr">
+                            Наши сотрудники всегда готовы 
+                            поделиться своим опытом,<br>
+                            так как сами бегают полумарафоны, 
+                            переплыли Босфор, готовятся к 
+                            соревнованиям по триатлону!
+                        </div>
                 </div>
-                <div class="advantages__block">
+                <div class="advantages__item">
                     <img src="icons/advantage_2.png" alt="heart">
-                    <div class="advantages__descr">
-                        <div class="advantages__subheader">Заботимся о здоровье</div>
-                        <div class="advantages__text">Мы работаем для того,<br>
+                        <div class="advantages__subtitle">
+                            Заботимся о здоровье
+                        </div>
+                        <div class="advantages__descr">
+                            Мы работаем для того,<br>
                             чтобы Ваши занятия спортом шли на 
                             пользу Вашему здоровью и были в 
                             радость Вам и Вашим близким!
                         </div>
-                    </div>
                 </div>
-                <div class="advantages__block">
-                    <img src="icons/advantage_3.png" alt="sneaker">
+                <div class="advantages__item">
+                    <img src="icons/advantage_3.png" alt="shoe">
                     <div class="advantages__descr">
-                        <div class="advantages__subheader">Учим бегать</div>
-                        <div class="advantages__text">Помогаем с обучением<br>
+                        <div class="advantages__subtitle">
+                            Учим бегать
+                        </div>
+                        <div class="advantages__descr">
+                            Помогаем с обучением<br>
                             правильной технике бега!<br>
                             Дружим с крупнейшей школой бега в России - 
                             <a href="#">I LOVE RUNNING.</a>
@@ -98,5 +115,7 @@
             </div>
         </div>
     </div>
+
+    <script src="js/script.js"></script>
 </body>
 </html>
